--- a/views/test.html
+++ b/views/test.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Welcome</h1>
+    <h1>Welcome to PawsWeb</h1>
 </body>
 </html>
