--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 body{
     margin-top: 5rem;
+    background-image: url("./assets/images/background.gif");
     background-color: white;
     height: 100vh;
     width: 100%;
